src/snapshots/matcha__scanner__test__scan_if_statement.snap
---
source: src/scanner.rs
expression: "Hello {% if is_user %}User{% endif %}"
---
[
    (
        Text(
            "Hello ",
        ),
        0..6,
    ),
    (
        OpenStmt,
        6..7,
    ),
    (
        If,
        9..11,
    ),
    (
        GleamTokenOrIdentifier(
            "is_user",
        ),
        12..19,
    ),
    (
        CloseStmt,
        20..21,
    ),
    (
        Text(
            "User",
        ),
        22..26,
    ),
    (
        OpenStmt,
        26..27,
    ),
    (
        EndIf,
        29..34,
    ),
    (
        CloseStmt,
        35..36,
    ),
]
