src/snapshots/matcha__scanner__test__scan_pure_text.snap
---
source: src/scanner.rs
expression: "Hello name, good to meet you"
---
[
    (
        Text(
            "Hello name, good to meet you",
        ),
        0..27,
    ),
]
