src/snapshots/matcha__scanner__test__scan_tree_block.snap
---
source: src/scanner.rs
expression: "Hello {[ tree ]}, good to meet you"
---
[
    (
        Text(
            "Hello ",
        ),
        0..6,
    ),
    (
        OpenBuilder,
        6..7,
    ),
    (
        GleamTokenOrIdentifier(
            "tree",
        ),
        9..13,
    ),
    (
        CloseBuilder,
        14..15,
    ),
    (
        Text(
            ", good to meet you",
        ),
        16..33,
    ),
]
