src/snapshots/matcha__scanner__test__scan_tree_expression.snap
---
source: src/scanner.rs
expression: "Hello {[ string_tree.from_strings([\"Anna\", \" and \", \"Bob\"]) ]}, good to meet you"
---
[
    (
        Text(
            "Hello ",
        ),
        0..6,
    ),
    (
        OpenBuilder,
        6..7,
    ),
    (
        GleamTokenOrIdentifier(
            "string_tree.from_strings([\"Anna\",",
        ),
        9..42,
    ),
    (
        GleamTokenOrIdentifier(
            "\"",
        ),
        43..44,
    ),
    (
        GleamTokenOrIdentifier(
            "and",
        ),
        45..48,
    ),
    (
        GleamTokenOrIdentifier(
            "\",",
        ),
        49..51,
    ),
    (
        GleamTokenOrIdentifier(
            "\"Bob\"])",
        ),
        52..59,
    ),
    (
        CloseBuilder,
        60..61,
    ),
    (
        Text(
            ", good to meet you",
        ),
        62..79,
    ),
]
