src/snapshots/matcha__scanner__test__scan_two_identifiers.snap
---
source: src/scanner.rs
expression: "Hello {{ name }}, {{ adjective }} to meet you"
---
[
    (
        Text(
            "Hello ",
        ),
        0..6,
    ),
    (
        OpenValue,
        6..7,
    ),
    (
        GleamTokenOrIdentifier(
            "name",
        ),
        9..13,
    ),
    (
        CloseValue,
        14..15,
    ),
    (
        Text(
            ", ",
        ),
        16..18,
    ),
    (
        OpenValue,
        18..19,
    ),
    (
        GleamTokenOrIdentifier(
            "adjective",
        ),
        21..30,
    ),
    (
        CloseValue,
        31..32,
    ),
    (
        Text(
            " to meet you",
        ),
        33..44,
    ),
]
