src/snapshots/matcha__scanner__test__scan_with.snap
---
source: src/scanner.rs
expression: "{> with user as User\n{{ user }}"
---
[
    (
        OpenLine,
        0..1,
    ),
    (
        With,
        3..7,
    ),
    (
        GleamTokenOrIdentifier(
            "user",
        ),
        8..12,
    ),
    (
        As,
        13..15,
    ),
    (
        GleamTokenOrIdentifier(
            "User",
        ),
        16..20,
    ),
    (
        CloseLine,
        20..20,
    ),
    (
        OpenValue,
        21..22,
    ),
    (
        GleamTokenOrIdentifier(
            "user",
        ),
        24..28,
    ),
    (
        CloseValue,
        29..30,
    ),
]
